--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
   <title>Curates</title>
-  <link href="http://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="assets/styles/standardize.css">
   <link rel="stylesheet" href="assets/styles/linkview-grid.css">
   <link rel="stylesheet" href="assets/styles/styles.css">
@@ -22,7 +22,7 @@
   <script src="modules/createCollection/createCollection.js"></script>
   <nav class="navbar"></nav>
   <p class="logotext logotext-1"><a ng-href='/'><span>Curates</span></a></p>
-  <div class="signin clearfix" ng-controller="userMangamentController">
+  <div class="signin clearfix" ng-controller="userManagementController">
     <user-management />
   </div>
 <!--   <div ng-controller="userMangamentController">
