fixed login request to server

--- a/client/directives/userManagement.html
+++ b/client/directives/userManagement.html
@@ -7,7 +7,7 @@
   </div>
   <div class="loggedIn" ng-if="loggedIn">
     <form id="logout" ng-submit="logout()">
-      Welcome {{ user.givenName }}!!
+      Welcome {{ user.user }}!!
       <button type="submit" name="submit">Log Out</button>
     </form>
     <a ng-href="#/create">Create New</a> &nbsp;&nbsp;&nbsp;
