updated singleCollection to use promises

--- a/client/modules/singleCollection/singleCollection.html
+++ b/client/modules/singleCollection/singleCollection.html
@@ -1,4 +1,4 @@
-<div ng-controller="singleCollectionController">
+<div>
   <div class="select-collection select-collection-1 clearfix">
     <a ng-href="#/{{ collection.url }}/edit" ng-if="isUser"><button class="edit-btn" ng-if="isUser">Edit</button></a>
     <p class="collection-title-text"><span>{{ collection.title }}</span></p>
