updated urls to reinstate functionality

--- a/client/modules/singleCollection/singleCollection.html
+++ b/client/modules/singleCollection/singleCollection.html
@@ -15,7 +15,7 @@
         <div class="box"></div> 
       </div>
       <div class="link-text clearfix">
-        <p class="link-title-text"><a ng-href="{{ link.url }}"><span>{{ link.title }}</span></a></p>
+        <p class="link-title-text"><a href="http://{{ link.url }}"><span>{{ link.title }}</span></a></p>
         <p class="link-description-text">{{ link.description }}</p>
       </div>
     </div>
