updated user lists to use new api endpoint and username

--- a/client/directives/collectionMeta.html
+++ b/client/directives/collectionMeta.html
@@ -13,7 +13,7 @@
   </div>
   <div class="collection-text collection-text-2 clearfix">
     <p class="collection-title">
-      <a ng-href="#/{{ collection.url }}">{{ collection.title }} <span class="collection-username"><i> by {{ collection.user.givenName }}</span></i></a>
+      <a ng-href="#/{{ collection.url }}">{{ collection.title }}</a><a ng-href="#/collections/{{ collection.user.givenName }}"><span class="collection-username"> by {{ collection.user.givenName }}</span></a>
     </p>
     <p class="collection-description">{{ collection.description }}</p>
   </div>
