--- a/client/modules/myCollections/myCollections.html
+++ b/client/modules/myCollections/myCollections.html
@@ -1,3 +1,3 @@
-<div ng-controller="myCollectionsController" class="single-collection single-collection-2 clearfix">
+<div class="single-collection single-collection-2 clearfix">
   <collection-meta ng-repeat="collection in collections" collection="collection collection-box-1" />
 </div>
