--- a/client/modules/singleCollection/singleCollection.html
+++ b/client/modules/singleCollection/singleCollection.html
@@ -3,8 +3,8 @@
     <p class="collection-title-text"><span>{{ collection.title }}</span></p>
     <p class="collection-description-text">{{ collection.description }}</p>
     <div class="btn-container clearfix">
-      <button class="clone-btn" ng-if="!isUser" ng-click="clone()">Favorite</button>
-      <button class="upvote-btn" ng-click="upVote()" ng-if="notYetUpvoted">Upvote</button>
+      <button class="clone-btn" ng-click="addFavorite()">Favorite</button>
+      <button class="upvote-btn" ng-click="upVoteCollection()">Upvote</button>
       <span class="link-description-text" style="margin-top: .5rem;" ng-if="!notYetUpvoted">Liked!</span>
     </div>
   </div>
