--- a/client/directives/collectionMeta.html
+++ b/client/directives/collectionMeta.html
@@ -1,19 +1,8 @@
 <div class="collectionMeta">
   <div class="collection-box collection-box-1"></div>
-  <div class="votes-user votes-user-2 clearfix">
-    <div class="votes-box votes-box-2 clearfix">
-      <p class="votes-text votes-text-2">
-        <span>{{collection.stars}}</span>
-      </p>
-      <p class="vote-num">
-        <span>votes</span>
-      </p>
-      <p class="vote-label"></p>
-    </div>
-  </div>
   <div class="collection-text collection-text-2 clearfix">
     <p class="collection-title">
-      <a ng-href="#/{{ collection.url }}">{{ collection.title }}</a><a ng-href="#/collections/{{ collection.user.givenName }}"><span class="collection-username"> by {{ collection.user.givenName }}</span></a>
+      <a ng-href="#/{{ collection.url }}">{{ collection.title }}</a>
     </p>
     <p class="collection-description">{{ collection.description }}</p>
   </div>
