--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,5 @@
 <html>
+<head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
   <title>Curates</title>
@@ -6,17 +7,17 @@
   <link rel="stylesheet" href="assets/styles/standardize.css">
   <link rel="stylesheet" href="assets/styles/linkview-grid.css">
   <link rel="stylesheet" href="assets/styles/styles.css">
+</head>
 <body ng-app="curates" class="body index clearfix">
   <nav class="navbar"></nav>
   <p class="logotext logotext-1"><a ng-href='/'><span>Curates</span></a></p>
   <div class="signin clearfix" ng-controller="userManagementController">
     <user-management />
   </div>
-<!--   <div ng-controller="userMangamentController">
-    <user-management />
-  </div> -->
+
   <div ui-view></div>
-  
+
+  <!-- Development Files -->
   <script src="lib/underscore/underscore.js"></script>
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
