--- a/client/directives/userManagement.html
+++ b/client/directives/userManagement.html
@@ -1,13 +1,13 @@
 <div class="userManagement">
-  <div class="notLoggedIn" ng-if="!loggedIn">
+  <div class="notLoggedIn" ng-if="!loggedIn[0]">
     <form id="signin" ng-submit="login(name)">
       <input class="_input" placeholder="Username" type="text" ng-model="name" name="username">
       <button class="_button" type="submit" name="submit">Sign In</button>
     </form>
   </div>
-  <div class="loggedIn" ng-if="loggedIn">
+  <div class="loggedIn" ng-if="loggedIn[0]">
     <form id="logout" ng-submit="logout()">
-      Welcome {{ user.user }}!!
+      Welcome {{ user.username }}!!
       <button type="submit" name="submit">Log Out</button>
     </form>
     <a ng-href="#/create">Create New</a> &nbsp;&nbsp;&nbsp;
