updated userManagement tasks and individual collection fetching

--- a/client/directives/userManagement.html
+++ b/client/directives/userManagement.html
@@ -1,16 +1,14 @@
 <div class="userManagement">
   <div class="notLoggedIn" ng-if="!loggedIn[0]">
-    <form id="signin" ng-submit="login(name)">
-      <input class="_input" placeholder="Username" type="text" ng-model="name" name="username">
-      <button class="_button" type="submit" name="submit">Sign In</button>
-    </form>
+    <button class="_button" ng-click="login('bob', '123')">Sign In</button>
+    <button class="_button" ng-click="login('bob', '123', 'bob@gmail.com')">Sign Up</button>
   </div>
   <div class="loggedIn" ng-if="loggedIn[0]">
-    <form id="logout" ng-submit="logout()">
-      Welcome {{ user.username }}!!
-      <button type="submit" name="submit">Log Out</button>
-    </form>
-    <a ng-href="#/create">Create New</a> &nbsp;&nbsp;&nbsp;
+    <div>
+      Welcome {{ user.username }}!!!
+      <button ng-click="logout('bob')">Log Out</button>
+    </div>
+    <a ng-href="#/create">Create New</a> || 
     <a ui-sref="myCollections">Your Collections</a><br />
   </div>
 </div>
