--- a/client/modules/createCollection/createCollection.html
+++ b/client/modules/createCollection/createCollection.html
@@ -1,4 +1,4 @@
-<div ng-controller="createCollectionController">
+<div>
   <div class="notLoggedIn" ng-if="!loggedIn">
     <h2 class="login-to-use">Log in to create a collection.</h2>
   </div>
