--- a/client/modules/collectionsList/collectionsList.html
+++ b/client/modules/collectionsList/collectionsList.html
@@ -1,11 +1,6 @@
-<div>
-  <div class="collections-search clearfix">
-    <button class="_button">Search</button>
-    <input class="_input" type="text" ng-model="query">
-  </div>
-  <div class="single-collection single-collection-2 clearfix">
-    <div class="collection clearfix">
+<div class="search-area">
+    <input class="search-box" type="text" ng-model="query">
+    <div>
       <collection-meta ng-repeat="collection in listData | filter:query | orderBy:predicate" collection="collection" /></collection-meta>
     </div>
-  </div>
 </div>
