--- a/client/directives/collectionMeta.html
+++ b/client/directives/collectionMeta.html
@@ -1,4 +1,7 @@
 <div class="collection-box">
+    <!-- Create ng-if to hide icon if already favorited -->
+    <img class="logo" src="../../assets/images/heart-icon.png" />
+
     <h2 class="collection-title" ui-sref="collection({url: collection.url})">{{ collection.title }}</h2>
     <p class="collection-description">{{ collection.description }}</p>
     <p class="collection-creator" ui-sref="user-collections({user: collection.user.givenName})">{{collection.user.givenName}}</p>
