added modals for logins and signups

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
   <script src="directives/userManagement.js"></script>
   <script src="services/collectionFactory.js"></script>
   <script src="directives/collectionMeta.js"></script>
+  <script src="directives/modalDialog.js"></script>
   <script src="modules/createCollection/createCollection.js"></script>
 </body>
 </html>
