--- a/client/modules/singleCollection/singleCollection.html
+++ b/client/modules/singleCollection/singleCollection.html
@@ -1,6 +1,6 @@
 <div>
   <div class="collection-box">
-    <img class="logo" src="../../assets/images/add.png" ng-click="console.log('hi')"/>
+    <img class="logo" src="../../assets/images/add.png" ng-click="addLink('hi')"/>
     <img class="logo" src="../../assets/images/heart-icon.png" />
     <h2 class="collection-title">{{ collection.title }}</h2>
     <p class="collection-description-text">{{ collection.description }}</p>
