--- a/client/directives/userManagement.html
+++ b/client/directives/userManagement.html
@@ -1,9 +1,11 @@
 <div>
-  <div class="" ng-if="!loggedIn[0]">
-    <a class="user-button" ng-click="login('bob', '123')">Sign In</a>
-    <a class="user-button" ng-click="login('bob', '123', 'bob@gmail.com')">Sign Up</a>
+  <div ng-if="!loggedIn[0]">
+    <a class="user-button" ng-click="loginShown = !loginShown">Sign In</a>
+    <a class="user-button" ng-click="signupShown = !signupShown">Sign Up</a>
+    <modal-dialog show="loginShown" action="login(userInfo)" template-url="directives/login.tpl.html"></modal-dialog>
+    <modal-dialog show="signupShown" action="signup(userInfo)" template-url="directives/signup.tpl.html"></modal-dialog>
   </div>
-  <div class="loggedIn" ng-if="loggedIn[0]">
+  <div ng-if="loggedIn[0]">
     <div>
       Welcome, {{ user.username }}!
       <button class="user-button" ng-click="logout('bob')">Log Out</button>
