extension overhaul + magic added

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 <body class="i-container" ng-app="curates">
   <div class="i-g">
     <div class="i-8 logo">
-      <h1 class="pulse" ui-sref="collections">Curates</h1>
+      <h1 ui-sref="collections">Curates</h1>
     </div>
     <div class="i-4 signin" ng-controller="userManagementController">
       <user-management/>
