--- a/extension/chrome/app/popup.html
+++ b/extension/chrome/app/popup.html
@@ -3,8 +3,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
   <title>Curates</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
-  <script src="http:///cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
+  <script src="scripts/angular.min.js"></script>
+  <script src="scripts/angular-ui-router.min.js"></script>
   <script src="scripts/popup.js"></script>
 <body ng-app="curates">
   <div ng-controller="MainController" ui-view>
