refactoring to use multiple controllers

--- a/extension/chrome/app/popup.html
+++ b/extension/chrome/app/popup.html
@@ -7,7 +7,7 @@
   <script src="scripts/angular-ui-router.min.js"></script>
   <script src="scripts/popup.js"></script>
 <body ng-app="curates">
-  <div ng-controller="MainController" ui-view>
+  <div ui-view>
   </div>
 </body>
 </html>
