(bug) module curates.random has proper route

--- a/client/modules/random/experimental.html
+++ b/client/modules/random/experimental.html
@@ -1,3 +1,13 @@
 <div id="wtf">
-
+  iewjfiwglwengklwnlkwenklwnflwelewngvjrnvlwnvlwrnjw
+  <div>joigbe</div>
+  <div>fwef</div>
+  <div>evger</div>
+  <div>gver</div>
+  <div>ergve</div>
+  <div>er</div>
+  <div>ver</div>
+  <div>ergvre</div>
+  <div></div>
+  <div>erv</div>
 </div>
