--- a/client/index.html
+++ b/client/index.html
@@ -35,5 +35,8 @@
   <script src="directives/collectionMeta.js"></script>
   <script src="directives/modalDialog.js"></script>
   <script src="modules/createCollection/createCollection.js"></script>
+
+  <script src="modules/random/randomModule.js"></script>
+
 </body>
 </html>
