--- a/client/modules/singleCollection/singleCollection.html
+++ b/client/modules/singleCollection/singleCollection.html
@@ -6,7 +6,7 @@
     <p class="collection-description-text">{{ collection.description }}</p>
   </div>
   <div class="collection-box" ng-repeat="link in collection.links">
-      <a href="http://{{ link.url }}" target="_blank"><h2 class="collection-title">{{ link.title }}</h2></a>
+      <a href="http://{{ link.url }}" target="_blank"><h2 class="collection-title">{{ link.name }}</h2></a>
       <p class="collection-description">{{ link.description }}</p>
       <div ng-click="voteLink(collection, link, 1)" class="arrow-up"></div>
       <div ng-click="voteLink(collection, link, -1)" class="arrow-down"></div> 
