--- a/client/modules/singleCollection/singleCollection.html
+++ b/client/modules/singleCollection/singleCollection.html
@@ -1,12 +1,13 @@
 <div>
   <div class="collection-box">
-    <img class="logo" src="../../assets/images/add.png" ng-click="addLink('hi')"/>
+    <img class="logo" src="../../assets/images/add.png" ng-click="addShown = true"/>
     <img class="logo" src="../../assets/images/heart-icon.png" />
     <h2 class="collection-title">{{ collection.title }}</h2>
     <p class="collection-description-text">{{ collection.description }}</p>
+    <modal-dialog show="addShown" action="addLink(link)" template-url="directives/addlink.tpl.html"></modal-dialog>
   </div>
   <div class="collection-box" ng-repeat="link in collection.links">
-      <a href="http://{{ link.url }}" target="_blank"><h2 class="collection-title">{{ link.name }}</h2></a>
+      <a href="http://{{ link.url }}" target="_blank"><h2 class="collection-title">{{ link.title }}</h2></a>
       <p class="collection-description">{{ link.description }}</p>
       <div ng-click="voteLink(collection, link, 1)" class="arrow-up"></div>
       <div ng-click="voteLink(collection, link, -1)" class="arrow-down"></div> 
