--- a/client/directives/addlink.tpl.html
+++ b/client/directives/addlink.tpl.html
@@ -3,7 +3,7 @@
   <div class="modal-dialog" ng-style="dialogStyle">
     <div class="modal-close" ng-click="hideModal()">X</div>
     <div class="modal-dialog-content">
-      <form ng-submit="action({link: link})">
+      <form ng-submit="action({link: link}); hideModal();">
         <div>Title</div>
         <input class="" type="text" ng-model="link.title">
         <div>URL</div>
