--- a/client/modules/myCollections/myCollections.html
+++ b/client/modules/myCollections/myCollections.html
@@ -1,3 +1,3 @@
-<div class="single-collection single-collection-2 clearfix">
+<div>
   <collection-meta ng-repeat="collection in collections" collection="collection" user="user.username"/>
 </div>
