updated create new collection area

--- a/client/modules/createCollection/createCollection.html
+++ b/client/modules/createCollection/createCollection.html
@@ -1,7 +1,7 @@
-<div>
+<div class="search-area">
   <form ng-submit="submitCreate(collection)">
-    <input class="" type="text" ng-model="collection.title">
-    <textarea class="collection-description" placeholder="Enter Collection Description" name="description" ng-model="collection.description"></textarea>
+    <input class="search-box" type="text" ng-model="collection.title"></br>
+    <textarea class="description-box" rows="6" ng-model="collection.description"></textarea></br>
     <button class="create-collection-btn" name="submit" type="submit">Create Collection</button>
   </form>
 </div>
