styled button on create collection page

--- a/client/modules/createCollection/createCollection.html
+++ b/client/modules/createCollection/createCollection.html
@@ -2,6 +2,6 @@
   <form ng-submit="submitCreate(collection)">
     <input class="search-box" type="text" ng-model="collection.title"></br>
     <textarea class="description-box" rows="6" ng-model="collection.description"></textarea></br>
-    <button class="create-collection-btn" name="submit" type="submit">Create Collection</button>
+    <button class="user-button" name="submit" type="submit">Create Collection</button>
   </form>
 </div>
