--- a/client/modules/singleCollection/singleCollection.html
+++ b/client/modules/singleCollection/singleCollection.html
@@ -7,7 +7,7 @@
     <modal-dialog show="addShown" action="addLink(link)" template-url="directives/addlink.tpl.html"></modal-dialog>
   </div>
   <div class="collection-box" ng-repeat="link in collection.links">
-      <a href="http://{{ link.url }}" target="_blank"><h2 class="collection-title">{{ link.title }}</h2></a>
+      <a href="{{ link.url }}" target="_blank"><h2 class="collection-title">{{ link.title }}</h2></a>
       <p class="collection-description">{{ link.url }}</p>
       <div ng-click="voteLink(collection, link,  1)" class="arrow-up"></div>
       <div ng-click="voteLink(collection, link, -1)" class="arrow-down"></div>
