Extreme makeover curates edition

--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,12 @@
 </head>
 <body class="i-container" ng-app="curates">
   <div class="i-g">
-    <div class="i-8 logo">
-      <h1 ui-sref="collections">Curates</h1>
+    <div class="i-2">
+      <div class="logo">
+        <h1 ui-sref="collections">Curates</h1>
+      </div>
     </div>
+    <div class="i-6"></div>
     <div class="i-4 signin" ng-controller="userManagementController">
       <user-management/>
     </div>
