--- a/client/directives/collectionMeta.html
+++ b/client/directives/collectionMeta.html
@@ -1,6 +1,4 @@
-<div class="collection-box">
-    <!-- Create ng-if to hide icon if already favorited -->
-    <img class="logo" src="../../assets/images/heart-icon.png" ng-click="addFav(collection)"/>
-    <h2 class="collection-title" ng-click="setCollection(collection)" ui-sref="collection({url: collection.url})">{{ collection.title }}</h2>
+<div ui-sref="collection({url: collection.url})" class="collection-box">
+    <h2 class="collection-title" ng-click="setCollection(collection)">{{ collection.title }}</h2>
     <p class="collection-description">{{ collection.description }}</p>
 </div>
