--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="initial-scale=1.0">
   <title>Curates</title>
   <link href='http://fonts.googleapis.com/css?family=Philosopher' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="assets/styles/styles.css">
   <link rel="stylesheet" href="assets/styles/icecream-grid.min.css">
 </head>
