--- a/client/modules/singleCollection/singleCollection.html
+++ b/client/modules/singleCollection/singleCollection.html
@@ -6,8 +6,8 @@
     <p class="collection-description-text">{{ collection.description }}</p>
     <modal-dialog show="addShown" action="addLink(link)" template-url="directives/addlink.tpl.html"></modal-dialog>
   </div>
-  <div class="collection-box" ng-repeat="link in collection.links">
-      <a href="{{ link.url }}" target="_blank"><h2 class="collection-title">{{ link.title }}</h2></a>
+  <div class="collection-box" ng-repeat="link in links | orderBy : confidence : reverse">
+      <a href="http://{{ link.url }}" target="_blank"><h2 class="collection-title">{{ link.title }}</h2></a>
       <p class="collection-description">{{ link.url }}</p>
       <div ng-click="voteLink(collection, link,  1)" class="arrow-up"></div>
       <div ng-click="voteLink(collection, link, -1)" class="arrow-down"></div>
