--- a/client/modules/singleCollection/singleCollection.html
+++ b/client/modules/singleCollection/singleCollection.html
@@ -10,6 +10,7 @@
       <a href="http://{{ link.url }}" target="_blank"><h2 class="collection-title">{{ link.title }}</h2></a>
       <p class="collection-description">{{ link.url }}</p>
       <div ng-click="voteLink(collection, link,  1)" class="arrow-up"></div>
+      <span>{{ link.upVote - link.downVote }}</span>
       <div ng-click="voteLink(collection, link, -1)" class="arrow-down"></div>
   </div>
 </div>
